--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firedart: ^0.9.0+1
+  file_picker: ^4.0.0
+
+ 
+  
+
 
 
 dev_dependencies:
@@ -65,6 +70,7 @@ flutter:
   assets:
     - assets/Icon/
     - assets/LodingImg/
+    - assets/google-services.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
