--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firedart: ^0.9.0+1
   file_picker: ^4.0.0
+  pie_chart: ^5.3.2
+  fl_chart: ^0.62.0
+  charts_flutter: ^0.12.0
+  
 
 
  
