--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   firedart: ^0.9.0+1
   file_picker: ^4.0.0
   pie_chart: ^5.3.2
-  fl_chart: ^0.62.0
   charts_flutter: ^0.12.0
+  syncfusion_flutter_charts: ^21.1.41
+  intl: ^0.17.0
   
 
 
