download pdf start

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   charts_flutter: ^0.12.0
   syncfusion_flutter_charts: ^21.1.41
   intl: ^0.17.0
+  pdf: ^3.10.1
+  path_provider: ^2.0.2
   
 
 
